<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/satisfy_your_cravings_nwith_just_a_tap_recipe_app"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutShare"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutRate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_rate"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/rate_app"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutApps"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_more_apps"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/view_more_apps"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutFeedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_feedback"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/send_feedback"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/linearLayoutPrivacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/selector_effect"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:background="@color/primary" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="9dp"
                    android:src="@drawable/ic_policy"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Sign Out"
        android:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>